--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "jquery": "^3.3.1",
-    "lightbox2": "^2.10.0"
+    "lightbox2": "^2.10.0",
+    "underscore": "^1.9.1"
   }
 }
