--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: python
 python:
   - "3.6"
-before_script: cd src
+before_script:
+  - python generators/dirmaker.py
+  - cd src
 script:
   - ./manage.py test
