--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,33 @@
 version: '3.4'
 
+networks:
+  net:
+
+volumes:
+  postgres_data:
+    driver: local
+
 services:
   db:
     image: postgres
+    container_name: hexchan_db
     restart: always
+    environment:
+      - POSTGRES_DB=postgres
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
     networks:
       - net
-    healthcheck:
-      test: ["CMD", "pg_isready -U postgres"]
-      interval: 10s
-      timeout: 5s
-      retries: 3
+    volumes:
+      - postgres_data:/var/lib/postgresql
 
   app:
     build: .
+    container_name: hexchan_app
     restart: always
+    environment:
+      - POSTGRES_PASSWORD=postgres
+      - FAKE_CONTENT=true
     ports:
       - 8000:8000
     networks:
@@ -23,6 +36,3 @@ services:
       - db
     links:
       - db
-
-networks:
-  net:
