update: django 5.1, postgres 12

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-bleach==3.1.0
-Django==2.1.5
-django-debug-toolbar==1.11
-Faker==1.0.1
-Markdown==3.0.1
-Pillow==5.4.1
-psycopg2-binary==2.7.6.1
-django-storages==1.7.1
-boto3==1.9.224
+bleach==6.1.0
+Django==5.0.1
+django-debug-toolbar==4.2.0
+Faker==22.4.0
+Markdown==3.5.2
+pillow==10.2.0
+psycopg2-binary==2.9.9
+django-storages==1.14.2
+boto3==1.34.23
